.examples/kubernetes/yaml/urlaubsverwaltung.yml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: urlaubsverwaltung
  name: urlaubsverwaltung
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: urlaubsverwaltung
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlaubsverwaltung
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urlaubsverwaltung
  template:
    metadata:
      labels:
        app: urlaubsverwaltung
    spec:
      containers:
        - name: urlaubsverwaltung
          image: synyx/urlaubsverwaltung:3.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
              httpGet:
                  path: /actuator/health
                  port: 8080
              initialDelaySeconds: 120
              periodSeconds: 10
              failureThreshold: 10
          readinessProbe:
              httpGet:
                  path: /actuator/health
                  port: 8080
              initialDelaySeconds: 60
              periodSeconds: 10
              failureThreshold: 10
          resources:
              requests:
                  cpu: 0.5
                  memory: "512Mi"
              limits:
                  cpu: 1.5
                  memory: "1024Mi"
          securityContext:
              privileged: false
              allowPrivilegeEscalation: false
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: urlaubsverwaltung
      securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
          runAsNonRoot: true
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: urlaubsverwaltung
spec:
  rules:
    - host: xxx
      http:
        paths:
          - path: /
            backend:
              serviceName: urlaubsverwaltung
              servicePort: http
